# RePAIR_dataset

./: .gitignore  README.md  cli.py  eval_gt.py  evaluate.py  example.py  pyproject.toml  test.py
repair_dataset/: __init__.py  data.py  datamanager.py  dataset.py  downloadable.py  downloader.py  info.py  kv_store.py  manager.py  reconstruct.py  split.py  utils.py  variant_version.py  version_type.py
repair_dataset/getters/: solved2d_getter.py  solved3d_getter.py
repair_dataset/patches/: __init__.py  patch_2ds_v2_0_1.py  patch_2ds_v2_0_2.py  patch_2ds_v2_5_0b.py  patch_2ds_v3_b1.py  patch_2ds_v3_b1_randrot.py  patch_2ds_v3_b2.py  patch_2ds_v3b.py  patch_v2_0_1.py  patch_v2_0_2.py  patch_v3_beta.py
repair_dataset/splits/: __init__.py
